# agent-reliability-lab

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
docs/: ARCHITECTURE.md  DATA_SOURCES.md  EVALUATION.md  PHASES.md
docs/decisions/: 0001-deterministic-first.md
evals/retail/tasks/: already_refunded_order.json  cross_customer_order_access.json  eligible_full_return.json  expired_return_window.json  failed_customer_verification.json  final_sale_item.json  high_value_refund_approval.json  idempotent_refund_retry.json  missing_order.json  partial_quantity_return.json
src/agent_reliability_lab/: __init__.py  cli.py
src/agent_reliability_lab/agents/: __init__.py  failing.py  protocol.py  reference.py
src/agent_reliability_lab/domains/: __init__.py
src/agent_reliability_lab/domains/retail/: __init__.py  database.py  environment.py  models.py  policies.py  (+2 more)
src/agent_reliability_lab/graders/: __init__.py  base.py  final_state.py  policy.py  tool_call.py
src/agent_reliability_lab/harness/: __init__.py  results.py  runner.py  tasks.py  trace.py
src/agent_reliability_lab/presentation/: __init__.py  formatters.py  view_models.py
tests/ui/: test_streamlit_app.py
tests/unit/: test_ci_workflow.py  test_cli_eval.py  test_graders.py  test_harness_runner.py  test_package_smoke.py  test_presentation_formatters.py  test_retail_environment.py  test_retail_fixtures.py  test_retail_models.py  test_retail_policies.py  test_retail_schema.py  test_retail_tools.py  test_task_definitions.py
