[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-reliability-lab"
version = "0.1.0"
description = "Deterministic evaluation harness for enterprise AI agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "sybase91" }]
dependencies = [
    "pydantic>=2,<3",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]
ui = [
    "streamlit>=1.37",
]

[project.scripts]
arl = "agent_reliability_lab.cli:app"

[project.urls]
Repository = "https://github.com/sybase91/agent-reliability-lab"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["agent_reliability_lab"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["agent_reliability_lab"]
